public class DualNumber {

  private double valor;
  private double derivada;
  public DualNumber(double x, double y){
    valor=x;
    derivada=y;
  }

  public DualNumber() {
    valor=0;
    derivada=0;

  }

   public double getValor(){return valor;}


}




